Remove embedded cassandra and use multistage docker builds